tests/NormalTests/paczka1/fuzzy1/79131980.err
Error in line 7: S731 A82 41,9
Error in line 9: S731 S928 89,7
Error in line 11: S731 A82 2,9
Error in line 24: ABoLEYrhR S73E E02,7
Error in line 19: S731 S731 184,4
Error in line 30: S731 A82 43,2
Error in line 28: 8zhGJU A82 55,3
